# Spaced_repetition

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/cards/: admin.py  models.py
apps/cards/migrations/: 0001_initial.py  0002_auto_20210704_0524.py  0003_alter_card_bucket.py  0004_alter_card_bucket.py  0005_alter_card_bucket.py
apps/decks/: admin.py  models.py
apps/decks/migrations/: 0001_initial.py
apps/schema/: admin.py  schema.py
apps/user/: admin.py  models.py
apps/user/migrations/: 0001_initial.py
apps/utils/: models.py
config/: settings.py  urls.py
