[tool.poetry]
name = "graphql"
version = "0.1.0"
description = ""
authors = ["Bhuwansingh248 <Bhuwansingh248@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.5"
djangorestframework = "^3.12.4"
psycopg2 = "^2.9.1"
graphene-django = "^2.15.0"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
